# rust-openenc

./: .gitignore  Cargo.toml  OPTIMIZATION_SUMMARY.md  README.md  martin.yaml  setup.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: Features.md  Inspiration.md  OpenENC.md
migrations/: 01_install_postgis.sql  02_create_enc_catalog.sql
src/: colors.rs  db.rs  feature.rs  main.rs  s57.rs  sprite.rs  style.rs  util.rs
src/features/: depare.rs  lights.rs  lndare.rs  mod.rs  soundg.rs
styles/: day.json  dusk.json  night.json
