[package]
name = "rust-openenc"
version = "0.1.0"
edition = "2024"

[dependencies]
gdal = "0.19.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "migrate",
] }

# Logging
log = "0.4"
env_logger = "0.10"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Progress bar
indicatif = "0.17"

# dotenv for env support
dotenv = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }

serde_json = "1"
